@startuml
' docs/ui-flow 準拠 + コンポーネントに色（ステレオタイプ）
' 主フローは上→下。各層内は左→右（Auth→Client→Staff）で視線は左上→右下に近い
skinparam shadowing true
skinparam roundcorner 12
skinparam BoxPadding 8
' T→B: ranksep=層の縦方向、nodesep=同ランク内の横方向
skinparam nodesep 36
skinparam ranksep 48
top to bottom direction

skinparam defaultFontColor #1E293B
skinparam ArrowColor #475569
skinparam ArrowThickness 1.3

skinparam package {
    BorderColor #64748B
    FontColor #0F172A
    FontStyle bold
    FontSize 13
}

skinparam component<<Controller>> {
    BackgroundColor #DBEAFE
    BorderColor #6366F1
    FontColor #1E1B4B
}
skinparam component<<Service>> {
    BackgroundColor #A5F3FC
    BorderColor #0891B2
    FontColor #164E63
}
skinparam component<<Entity>> {
    BackgroundColor #FDE68A
    BorderColor #D97706
    FontColor #78350F
}
skinparam component<<Infra>> {
    BackgroundColor #E2E8F0
    BorderColor #475569
    FontColor #1E293B
}

skinparam interface<<Repository>> {
    BackgroundColor #EDE9FE
    BorderColor #7C3AED
    FontColor #4C1D95
}

skinparam database<<Store>> {
    BackgroundColor #ECFDF5
    BorderColor #059669
    FontColor #064E3B
}

skinparam folder {
    BackgroundColor #FEF3C7
    BorderColor #D97706
    FontColor #78350F
}

package "1. Presentation Layer" #E0E7FF {
    [Auth Controller] <<Controller>>
    [Client Controller] <<Controller>>
    [Staff Controller] <<Controller>>
    [Auth Controller] -[hidden]right- [Client Controller]
    [Client Controller] -[hidden]right- [Staff Controller]
}

package "2. Application Layer" #CFFAFE {
    [Auth Service] <<Service>>
    [Client Service] <<Service>>
    [Staff Service] <<Service>>
    [Auth Service] -[hidden]right- [Client Service]
    [Client Service] -[hidden]right- [Staff Service]
}

package "3. Domain Layer" #FFFBEB {
    folder "Auth Domain" {
        [Auth Entity] <<Entity>>
        interface "Auth Repository" <<Repository>>
        [Auth Entity] -[hidden]right- "Auth Repository"
    }
    folder "Client Domain" {
        [Client Entity] <<Entity>>
        interface "Client Repository" <<Repository>>
    }
    folder "Staff Domain" {
        [Staff Entity] <<Entity>>
        interface "Staff Repository" <<Repository>>
    }
    "Auth Domain" -[hidden]right- "Client Domain"
    "Client Domain" -[hidden]right- "Staff Domain"
}

package "4. Infrastructure Layer" #F1F5F9 {
    [Eloquent Implementation] <<Infra>>
    database "MySQL / Redis" as mysqlRedis <<Store>>
    [Eloquent Implementation] -[hidden]down- mysqlRedis
}

[Auth Controller] -down-> [Auth Service]
[Client Controller] -down-> [Client Service]
[Staff Controller] -down-> [Staff Service]

[Auth Service] -down-> "Auth Domain"
[Client Service] -down-> "Client Domain"
[Staff Service] -down-> "Staff Domain"

' 下向きで「実装」を示す（..|> の上向き矢印を避ける）
"Auth Repository" ..> [Eloquent Implementation] : implements
"Client Repository" ..> [Eloquent Implementation] : implements
"Staff Repository" ..> [Eloquent Implementation] : implements
[Eloquent Implementation] -down-> mysqlRedis

@enduml
